# filling-holes-in-3d-meshes

./: CMakeLists.txt  README.md  filter_close_holes.cpp  filter_close_holes.h
